syntax = "proto3";

package homework.api;
option go_package = "gitlab.ozon.dev/krotovkk/homework/pkg/api;api";

import "google/api/annotations.proto";

service Admin {
  // create product endpoint
  rpc ProductCreate(ProductCreateRequest) returns (ProductCreateResponse) {
    option (google.api.http) = {
      post: "/v1/product"
      body: "*"
    };
  };

  // list products endpoint
  rpc ProductList(ProductListRequest) returns (ProductListResponse) {
    option (google.api.http) = {
      get: "/v1/products"
    };
  };


  // update product endpoint
  rpc ProductUpdate(ProductUpdateRequest) returns (ProductUpdateResponse) {
    option (google.api.http) = {
      put: "/v1/product"
      body: "*"
    };
  };

  // delete product endpoint
  rpc ProductDelete(ProductDeleteRequest) returns (ProductDeleteResponse) {
    option (google.api.http) = {
      delete: "/v1/product"
    };
  };
}

// ---------------------------------------------------------------------------------------------------------------------
// ProductCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message ProductCreateRequest {
  string name = 1;
  double price = 2;
}
message ProductCreateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// ProductList endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message ProductListRequest {}
message ProductListResponse {
  repeated Product products = 1;

  message Product {
    uint64 id = 1;
    string name = 2;
    double price = 3;
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// ProductUpdate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message ProductUpdateRequest {
  uint64 id = 1;
  string name = 2;
  double price = 3;
}
message ProductUpdateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// ProductDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message ProductDeleteRequest {
  uint64 id = 1;
}
message ProductDeleteResponse {}